# BADGETEST

./: CMakeLists.txt  LICENSE  dependencies.sh  readme.md  run_detector.sh
.github/workflows/: build_and_coveralls.yml
Docs/html/: annotated.html  classBlobGenerator-members.html  classBlobGenerator.html  classBlobGenerator__inherit__graph.map  classBlobGenerator__inherit__graph.md5  classHumanObjectDetector-members.html  classHumanObjectDetector.html  classHumanObjectDetector__coll__graph.md5  classHumanObjectDetector__inherit__graph.map  classes.html  constants_8hpp.html  constants_8hpp__dep__incl.map  constants_8hpp__dep__incl.md5  constants_8hpp__incl.map  constants_8hpp__incl.md5  constants_8hpp_source.html  dir_000000_000001.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  human__object__detector_8cpp.html  human__object__detector_8cpp__incl.map  human__object__detector_8cpp__incl.md5  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  namespaceODConstants.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  (+6 more)
Docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  (+23 more)
Results/: cppcheck.txt  cpplint.txt
app/: CMakeLists.txt  human_object_detector.cpp  main.cpp
include/: constants.hpp  object_detection.hpp
test/: CMakeLists.txt  human_object_detector_test.cpp  main.cpp  test.cpp
